# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-content_moderation_env"
version = "0.1.0"
description = "Content Moderation Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m content_moderation_env.server.app
server = "content_moderation_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["content_moderation_env", "content_moderation_env.server"]
package-dir = { "content_moderation_env" = ".", "content_moderation_env.server" = "server" }